--- a/branches/EchelonEditor2.0/resources/laf_config.properties
+++ b/branches/EchelonEditor2.0/resources/laf_config.properties
@@ -1,5 +1,5 @@
-#Sun Aug 26 17:36:33 CST 2012
-current_lafIndex=1
-current_laf=com.jtattoo.plaf.aero.AeroLookAndFeel
+#Tue Sep 25 15:12:10 CST 2012
+current_lafIndex=8
+current_laf=com.jtattoo.plaf.mcwin.McWinLookAndFeel
 current_font=\u5B8B\u4F53|0|12
-current_theme=Green
+current_theme=Default
