--- a/branches/EchelonEditor2.0/.classpath
+++ b/branches/EchelonEditor2.0/.classpath
@@ -6,13 +6,13 @@
 	<classpathentry kind="lib" path="src/com/echeloneditor/lib/chardet-1.0.jar"/>
 	<classpathentry kind="lib" path="src/com/echeloneditor/lib/cpdetector_1.0.10.jar"/>
 	<classpathentry kind="lib" path="src/com/echeloneditor/lib/jlfgr-1_0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6"/>
 	<classpathentry kind="lib" path="src/com/echeloneditor/lib/dom4j-2.0.0-ALPHA-2.jar"/>
-	<classpathentry kind="lib" path="src/com/echeloneditor/lib/autocomplete.jar"/>
 	<classpathentry kind="lib" path="src/com/echeloneditor/lib/js-14.jar"/>
 	<classpathentry kind="lib" path="src/com/echeloneditor/lib/JTattoo.jar"/>
 	<classpathentry kind="lib" path="src/com/echeloneditor/lib/language_support.jar"/>
 	<classpathentry kind="lib" path="src/com/echeloneditor/lib/rsyntaxtextarea.jar"/>
 	<classpathentry kind="lib" path="src/com/echeloneditor/lib/HexEditor.jar"/>
+	<classpathentry kind="lib" path="src/com/echeloneditor/lib/autocomplete.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
