--- a/branches/EchelonEditor2.0/resources/laf_config.properties
+++ b/branches/EchelonEditor2.0/resources/laf_config.properties
@@ -1,5 +1,5 @@
-#Fri Sep 28 09:30:27 CST 2012
-current_lafIndex=8
-current_laf=com.jtattoo.plaf.mcwin.McWinLookAndFeel
+#Fri Sep 28 14:26:27 CST 2012
+current_lafIndex=0
+current_laf=com.jtattoo.plaf.acryl.AcrylLookAndFeel
 current_font=\u5B8B\u4F53|0|20
-current_theme=Default
+current_theme=Lemmon
